<resources>
    <string name="app_name">AirControl</string>
    <string name="title_activity_maps">AirControl</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="search">Wyszukiwanie</string>
    <string name="profile">Profil</string>
    <string name="map">Mapa</string>
    <string name="settings">Ustawienia</string>
    <string name="news">Wiadomości</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="city">City</string>
    <string name="aqi">AQI %1$s</string>
    <string name="div">#</string>
    <string name="test">Long test text to check how string looks like</string>
    <string name="date">17.10.2020 17:00:00</string>
    <string name="test_address">Test address</string>
    <string name="pm10">PM10</string>
    <string name="units">µg/m3</string>
    <string name="exampleValue">35.5</string>
    <string name="aqi_header">AQI</string>
    <string name="forecast">Forecast</string>
    <string name="ranking">Ranking</string>
    <string name="daily_notification">Daily notification</string>
    <string name="pm25">PM25</string>
    <string name="o3">O3</string>
    <string name="current_data">Current data</string>
    <string name="first">first</string>
    <string name="second">second</string>

    <string name="O3"><![CDATA[<b>O3</b> – ozon. Cząsteczki ozonu tworzą się przy powierzchni ziemi podczas reakcji chemicznych innych zanieczyszczeń, najczęściej w okresach o wysokich temperaturach i nasłonecznieniu. Poziom docelowy ozonu w Polsce wynosi 1200 µg/m3 (średnia wartość w ciągu 8 godzin).</br></br>

<b>Co sprzyja powstawaniu ozonu przyziemnego i kiedy się go bać?</b></br><lu>
Najwyższe stężenia ozonu przy powierzchni Ziemi występują wiosną i latem, ponieważ powstawaniu ozonu sprzyja słoneczna pogoda i wysoka temperatura powietrza. Ozon ma zdolność przenoszenia się na duże odległości, dlatego jego stężenia na obszarze Polski w dużej mierze zależą od stężeń ozonu w masach powietrza napływających nad teren naszego kraju – głównie z południowej i południowo-zachodniej Europy.
<lu>
W słoneczne, gorące dni najwyższe stężenia ozonu występują najczęściej w godzinach od 10-14, w tym samym czasie przy bezchmurnym niebie ma miejsce również największe promieniowanie UV
</br>
<b>Jak powstaje ozon?</b></br>
<lu>
<li>Ozon powstający przy powierzchni ziemi jest zanieczyszczeniem wtórnym i powstaje w wyniku reakcji fotochemicznych tlenków azotu i lotnych związków organicznych w atmosferze, reakcje te przyspiesza wysoka temperatura powietrza. Ozon ten nazywany jest  ozonem troposferycznym lub przyziemnym.</li>
</lu>
</br>
<lu><li>Ozon w stratosferze powstaje w wyniku oddziaływania promieniowania słonecznego na cząsteczki tlenu (O2), w wyniku czego cząsteczki te rozpadają się na dwa atomy tlenu (O). Następnie atomy tlenu reagują z tlenem cząsteczkowym i tworzą cząsteczki ozonu (O3). Ozon ten nazywany jest ozonem stratosferycznym lub warstwą ozonową.</li>
</lu>]]></string>
    <string name="CO"><![CDATA[<b>CO</b> – tlenek węgla, potocznie zwany czadem. To bezbarwny i bezwonny trujący gaz.</br>
Czad przedostaje się do ludzkiego organizmu poprzez układ oddechowy a następnie jest bardzo szybko wchłaniany do krwioobiegu. Dopuszczalne przez WHO stężenie tlenku węgla wynosi 35 ppm (ang. parts per milion, liczba części na milion).</br>

</br><b>Skąd się bierze?</b></br>
<ul>
  <li> Niepełne spalanie różnych paliw</li>
  <li> Pożary</li>
  <li> Piece węgłowe</li>
  <li> Kuchnie gazowe</li>
</ul>
</br>
<b>Jakie są objawy zatrucia tlenkiem węgla?</b></br>
<ul>
  <li> Lekki ból, mdłości wymioty, ogólne zmęczenie i osłabienie – lekkie zatrucie</li>
  <li> Nasilający się ból głowy, senność, zaburzenia świadomości i równowagi, trudności z oddychaniem, oddech przyspieszony, zaburzenia rytmu serca – średnie zatrucie</li>
  <li> Drgawki, utrata przytomności – ciężkie zatrucie</li>
</ul>
</br><b>Jak pomóc przy zatruciu tlenkiem węgla?</b></br>
<ul>
  <li> Należy natychmiast zapewnić dopływ świeżego, czystego powietrza</li>
  <li> Jak najszybciej wynieść osobę poszkodowaną w bezpieczne miejsce, na świeże powietrze</li>
  <li> Wezwać służby ratownicze (Pogotowie Ratunkowe – <b>tel. 999</b>)</li>
</ul>]]></string>
    <string name="NO2"><![CDATA[<b>NO2</b> – dwutlenek azotu, czyli jeden z najbardziej trujących składników smogu. Jest bardzo szkodliwy dla ludzkiego układu oddechowego. Głównym źródłem tego gazu są spaliny samochodowe oraz toksyny emitowane przez zakłady przemysłowe. Dopuszczalny w Polsce średnioroczny poziom dwutlenku azotu to 40 µg/m3</br></br>

<b>Czym grozi?</b></br>
<ul>
  <li> Działa drażniąco na spojówki oraz śluzówki nosa i gardł</li>
  <li> Podrażnia także układ oddechowy, może wywołać duszności, kłucie w klatce piersiowej, przyczynić się do skrócenia oddechu i zwiększyć podatność na infekcje dróg oddechowych</li>
  <li> U osób cierpiących na astmę NO2 może powodować zwiększenie reaktywności oskrzeli</li>
  <li> U osób zmagających się z przewlekłą chorobą obturacyjną płuc dodatkowo ograniczyć sprawność tego narządu</li>
</ul>
</br>
<b>Skutki długotrwałej ekspozycji na nadmierne stężenie NO2:</b></br>
<ul>
  <li> Astma oskrzelowa</li>
  <li> Przewlekła obturacyjna choroba płuc</li>
  <li> Choroby układu sercowo-naczyniowego</li>
  <li> Nowotwory, w szczególności płuc i piersi</li>
</ul>
]]></string>
    <string name="C6H6"><![CDATA[<b>C6H6</b> – benzen, jeden z najbardziej toksycznych i rakotwórczych związków organicznych. Kilkugodzinna ekspozycja na jego stężenie powyżej 80 mg/m3 może podrażnić nie tylko układ oddechowy człowieka, ale także układ krwiotwórczy, skórę i niektóre organy wewnętrzne. W Polsce jednak takich wartości nigdy nie odnotowano. Benzen jest emitowany do powietrza głównie przez zakłady przemysłowe.</br></br>

<b>Skąd się bierzy?</b>
<lu>
	<li>Benzen emitowany jest podczas procesów spalania paliw stałych i płynnych</li>
	<li>W piecach koksowniczych i hutach metali nieżelaznych</li>
	<li>Innym źródłem są: stacje paliw, pralnie chemiczne, wytwórnie mas bitumicznych, drukarnie foto-grawiurowe, przemysł</li>
</lu>

</br>
<b>Poziom dopuszczalny stężenia średniorocznego: 5 µg/m3</b>]]></string>
    <string name="SO2"><![CDATA[<b>SO2</b> – dwutlenek siarki. Po utlenieniu i połączeniu z wodą tworzy kwas siarkowy, który może prowadzić do kwaśnych deszczy. W Polsce obowiązującą normą jest średnie stężenie 125 µg/m3 tlenku siarki na dobę</br></br>

<b>Skąd się bierze?</b></br>
<ul>
  <li> Spalania paliw zawierających siarkę</li>
  <li> Spalanie paliw kopalnych przez elektrownie i inne zakłady przemysłowe</li>
  <li> Procesy przemysłowe takie jak obróbka rud metali</li>
</ul>
</br>
<b>Skutki ekspozycji na wysokie stężenia SO2:</b></br>
<ul>
  <li> Krótkoterminowa ekspozycja działa szkodliwie na układ oddechowy człowieka i upośledza funkcje oddechowe; do grup szczególnie narażonych należą dzieci, osoby starsze i chorujące na astmę</li>
  <li> Produkty przemiany SO2 (aerozole) mogą wnikać głęboko do płuc i wpływać na funkcjonowanie układu oddechowego</li>
</ul>

</br><b>Skutki środowiskowe: </b></br>
<ul>
  <li> Uszkadza liście i stożki wzrostu roślin, ogranicza fotosyntezę</li>
  <li> W postaci kwasu siarkowego niszczy wrażliwe ekosystemy leśne, osłabia system korzeniowy, niszczy bakterie glebowe</li>
</ul>
  ]]></string>
    <string name="PM25"><![CDATA[<b>PM2.5</b> – to mieszanina stałych i ciekłych cząstek o średnicy mniejszej od 2,5 µm zawieszonych w powietrzu w postaci aerozolu. Dla porównania średniej grubości ludzki włos ma przekrój 70 µm. Stężenie pyłów liczymy w mikrogramach na metr sześcienny [µg/m3]</br></br>

<b>Źródło</b>
<lu>
	<li>Spalanie paliw, w tym niska emisja czyli spalanie w piecach węgla słabej jakości oraz śmieci</li>
	<li>Zakłady przemysłowe</li>
	<li>ruch drogowy, w szczególności pojazdy z silnikami wysokoprężnymi (diesle)</li>
	<li>Pył pochodzący z zużycia opon, hamulców, asfaltu</li>
</lu>

</br>
<b>Ekspozycja na drobny pył może powodować</b>
<lu>
	<li>Przedwczesną śmierć osób z chorobami serca bądź płuc</li>
	<li>Nieregularną pracę serca, ataki serca</li>
	<li>Pogorszenie funkcji płuc np. trudności z oddychaniem, zadyszka</li>
	<li>Podrażnienie dróg oddechowych, kaszel</li>
	<li>Nasilenie objawów astmy</li>
</lu>]]></string>
    <string name="PM10"><![CDATA[<b>PM10</b> – to mieszanina stałych i ciekłych cząstek o średnicy mniejszej od 10 µm zawieszonych w powietrzu w postaci aerozolu. Dla porównania średniej grubości ludzki włos ma przekrój 70 µm. Stężenie pyłów liczymy w mikrogramach na metr sześcienny [µg/m3]</br></br>

<b>Źródło</b>
<lu>
	<li>Spalanie paliw, w tym niska emisja czyli spalanie w piecach węgla słabej jakości oraz śmieci</li>
	<li>Zakłady przemysłowe</li>
	<li>ruch drogowy, w szczególności pojazdy z silnikami wysokoprężnymi (diesle)</li>
	<li>Pył pochodzący z zużycia opon, hamulców, asfaltu</li>
</lu>

</br>
<b>Ekspozycja na drobny pył może powodować</b>
<lu>
	<li>Przedwczesną śmierć osób z chorobami serca bądź płuc</li>
	<li>Nieregularną pracę serca, ataki serca</li>
	<li>Pogorszenie funkcji płuc np. trudności z oddychaniem, zadyszka</li>
	<li>Podrażnienie dróg oddechowych, kaszel</li>
	<li>Nasilenie objawów astmy</li>
</lu>
</br>
<b>Normy dla pyłu PM10</b>

<lu>
	<li>Poziom dopuszczalny stężenia średniorocznego: 40 µg/m3</li>
	<li>Poziom dopuszczalny stężenia średniego 24-godzinnego: 50 µg/m3 (przekroczenie dopuszczalne maksymalnie 35 razy w roku)</li>
	<li>Poziom informowania stężenia średniego 24-godzinnego: 200 µg/m3</li>
	<li>Poziom alarmowy stężenia średniego 24-godzinnego: 300 µg/m3</li>
</lu>]]></string>
    <string name="back">back</string>
    <string name="rankings_and_news">Rankings and news</string>
    <string name="statistics">Statystyki</string>
    <string name="humidity">%1$s \%</string>
    <string name="wind_speed">%1$s m/s</string>
    <string name="temperature">%1$s °C</string>
    <string name="prognoza">Prognoza</string>
    <string name="dane_aktualne">Dane aktualne</string>
    <string name="purpleaqi"><b>Jakość powietrza jest niezdrowa.</b> <br/>
Znaczący wpływ. Wrażliwe grupy odczuwają spadek wytrzymałości podczas aktywności. Zaleca się pozostać w domu.</string>
    <string name="redaqi"><b>Jakość powietrza jest niska. </b> <br/>
Zwiększone ryzyko i prawdopodobieństwo pogorszenia chorób serca i płuc w grupach wrażliwych.</string>
    <string name="orangeaqi"><b>Jakość powietrza jest niezdrowa dla wrażliwych grup.</b> <br/>
Osoby bardzo wrażliwe są narażone na podrażnienia i problemy z oddychaniem.</string>
    <string name="yellowaqi"><b>Jakość powietrza jest umiarkowana.</b><br/>
Osoby wrażliwe powinny unikać aktywności na świeżym powietrzu, ponieważ mogą wystąpić objawy ze strony układu oddechowego.</string>
    <string name="greenaqi"><b>Jakość powietrza jest dobra.</b><br/>
Powietrze jest normalne, a większość populacji nie jest zagrożona. Zalecana jest wentylacja.</string>
    <string name="aqidesc"><b>AQI</b> to indeks jakości powietrza - system wskaźników odzwierciedlających aktualny stan zanieczyszczenia lub jakość powietrza. Wysokie wartości wskaźnika wskazują na wyższe i bardziej niebezpieczne poziomy zanieczyszczeń, podczas gdy wartości bliskie 0 są uznawane za dobrą jakość powietrza.</string>
</resources>