<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/position"
                android:layout_width="50dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/div"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/nameOfCity"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:text="@string/city"
                android:layout_toStartOf="@+id/aqiIndex"
                android:layout_toEndOf="@+id/position"/>

            <TextView
                android:id="@+id/aqiIndex"
                android:layout_width="60dp"
                android:gravity="center"
                android:text="@string/aqi_header"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <ListView
            android:id="@+id/ratingList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:padding="5dp"
            android:scrollbars="none"
            android:clickable="true" />

    </LinearLayout>
</layout>