<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp">

    <RelativeLayout
        android:id="@+id/dataItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.google.android.material.circularreveal.CircularRevealRelativeLayout
            android:id="@+id/colorIndicator"
            android:layout_width="5dp"
            android:layout_height="50dp"
            android:background="@drawable/yellow_rounded_corner"
            android:layout_marginTop="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titlePollutant"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_toEndOf="@+id/colorIndicator"
            android:text="@string/pm10"
            android:gravity="center_vertical"
            android:paddingStart="3dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_toEndOf="@+id/titlePollutant"
            android:gravity="center_vertical"
            android:text="@string/units"
            android:paddingStart="3dp"
            android:textColor="@color/gray"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dataPollutant"
            android:layout_width="130dp"
            android:layout_height="35dp"
            android:layout_below="@+id/titlePollutant"
            android:layout_toEndOf="@+id/colorIndicator"
            android:gravity="center_vertical"
            android:paddingStart="3dp"
            android:text="@string/exampleValue"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </RelativeLayout>



</RelativeLayout>