<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginTop="-200dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.1" />

        <EditText
            android:id="@+id/loginTextField"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:hint="@string/login"
            android:background="@drawable/edit_text_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.1" />

        <EditText
            android:id="@+id/passwordTextField"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:background="@drawable/edit_text_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintTop_toBottomOf="@+id/loginTextField" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_baseline_remove_red_eye_24"
            app:layout_constraintEnd_toEndOf="@+id/passwordTextField"
            app:layout_constraintTop_toTopOf="@+id/passwordTextField" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>