<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.IndexDescriptionFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            app:itemIconTint="@color/white"
            app:itemTextColor="@color/white"
            app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/arrowBack"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                app:icon="@drawable/ic_baseline_arrow_back_24"/>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/descTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="15sp"
            android:text="@string/aqidesc"
            app:layout_constraintTop_toBottomOf="@+id/toolBar"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/purpleImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/descTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            android:background="@drawable/purple_rounded_corner"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/descTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:text="201-300\n AQI"
            android:textSize="19sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="10dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/purpleDesc"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="100dp"
            android:padding="5dp"
            android:text="@string/purpleaqi"
            app:layout_constraintTop_toBottomOf="@+id/descTextView"
            app:layout_constraintStart_toEndOf="@+id/purpleImage"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/darkRedImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/purpleImage"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            android:background="@drawable/dark_red_roudned_corner"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/purpleImage"
            app:layout_constraintStart_toStartOf="parent"
            android:text="151-200\n AQI"
            android:textSize="19sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="10dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/DarkRedDesc"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="100dp"
            android:padding="5dp"
            android:text="@string/redaqi"
            app:layout_constraintTop_toBottomOf="@+id/purpleDesc"
            app:layout_constraintStart_toEndOf="@+id/darkRedImage"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/orangeImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/darkRedImage"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            android:background="@drawable/orange_rounded_corner"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/darkRedImage"
            app:layout_constraintStart_toStartOf="parent"
            android:text="101-150\n AQI"
            android:textSize="19sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="10dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/orangeDesc"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="100dp"
            android:text="@string/orangeaqi"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/DarkRedDesc"
            app:layout_constraintStart_toEndOf="@+id/orangeImage"
            app:layout_constraintEnd_toEndOf="parent"/>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/yellowImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/orangeImage"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            android:background="@drawable/yellow_rounded_corner"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/orangeImage"
            app:layout_constraintStart_toStartOf="parent"
            android:text="51-100\n AQI"
            android:textSize="19sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="10dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/yellowDesc"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="100dp"
            android:padding="5dp"
            android:text="@string/yellowaqi"
            app:layout_constraintTop_toBottomOf="@+id/orangeDesc"
            app:layout_constraintStart_toEndOf="@+id/yellowImage"
            app:layout_constraintEnd_toEndOf="parent"/>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/greenImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/yellowImage"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            android:background="@drawable/light_green_rounded_corner"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toBottomOf="@+id/yellowImage"
            app:layout_constraintStart_toStartOf="parent"
            android:text="0-50\n AQI"
            android:textSize="19sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="10dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/greenDesc"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="100dp"
            android:padding="5dp"
            android:text="@string/greenaqi"
            app:layout_constraintTop_toBottomOf="@+id/yellowDesc"
            app:layout_constraintStart_toEndOf="@+id/greenImage"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>